hotfix: remove z-index previously set on the video background variation; fixes a bug / quirk in Safari for iOS with regular band content (such as buttons) not being able to be interacted with as expected, causing click events on the button to not work.

--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -27,7 +27,6 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
   &[is-background-video]{
     flex-grow: 1;
-    z-index: 20;
     transition: opacity .3s ease, min-height .3s ease;
     top: 0;
     right: 0;
